# arxiv-rag

./: .gitignore  README.md  evaluation_scores.json  pyproject.toml
scripts/: app.py  build_embeddings.py  build_index.py  chunk_papers.py  compute_metrics.py  download_papers.py  evaluate.py  parse_papers.py  query.py  test_retrieval.py
src/arxiv_rag/: chunking.py  embeddings.py  generation.py  parsing.py  rag.py  retrieval.py  vectorstore.py
